--- a/Services/VDesignProject.Services.Data/VDesignProject.Services.Data.csproj
+++ b/Services/VDesignProject.Services.Data/VDesignProject.Services.Data.csproj
@@ -11,6 +11,7 @@
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
   </ItemGroup>
 
